package(default_visibility = ["//visibility:public"])
load("@rules_proto//proto:defs.bzl", "proto_library")
load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library", "cc_proto_library")
load("@com_github_grpc_grpc//bazel:cc_grpc_library.bzl", "cc_grpc_library")

cc_library(
  name = "file-reader",
  srcs = ["utils/file_reader.cc"],
  hdrs = ["utils/file_reader.h"]
)

cc_library(
  name = "server-lib",
  srcs = ["server.cc"],
  hdrs = ["server.h"],
  deps = [
      "//example/usps_api/config:config-parser",
      "//proto:sfc_cc_grpc_proto",
      "@com_github_grpc_grpc//:grpc++",
  ],
)

cc_binary(
  name = "run-server",
  srcs = ["run_server.cc"],
  deps = [
      ":server-lib",
      ":file-reader",
      "@com_google_absl//absl/flags:flag",
      "@com_google_absl//absl/flags:parse",
  ],
)

cc_binary(
  name = "run-client",
  srcs = ["client.cc"],
  deps = [
      ":file-reader",
      "//proto:sfc_cc_grpc_proto",
      "@com_github_grpc_grpc//:grpc++",
      "@com_google_absl//absl/flags:flag",
      "@com_google_absl//absl/flags:parse",
  ],
)
