package(default_visibility = ["//visibility:public"])

load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library", "cc_proto_library")

cc_proto_library(
  name = "sfc_filter_cc_proto",
  deps = ["//proto:sfc_filter_proto"],
)

cc_proto_library(
  name = "ghost_label_cc_proto",
  deps = ["//proto:ghost_label_proto"],
)

cc_library(
  name = "config-parser",
  srcs = ["config_parser.cc"],
  hdrs = ["config_parser.h"],
  data = ["config.json"],
  deps = [
      "@com_github_open_source_parsers_jsoncpp//:jsoncpp",
      ":sfc_filter_cc_proto",
      ":ghost_label_cc_proto",
  ],
)
